HTML and Background Update
All backgrounds are put in one folder and all the HTMLs upto storypage4 have been updated.

--- a/StoryPage1.html
+++ b/StoryPage1.html
@@ -6,11 +6,18 @@
         <title>Kung Fu Journey: Shen's Life</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+          #background{
+            background-image: url("backgrounds/backgroundswordstand.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+          }
+        </style>
     </head>
     <body>
       <h1>Kung Fu Journey</h1>
       <div class="navbar">
-        
       </div>
         <div id="background">
             <div id="content">
@@ -25,12 +32,7 @@
                     <a class="options" href="StoryPage2.html">Next</a>
                 </p>
             </div>
+            <a href="" class="previous">Previous</a>
         </div>
-        <script>
-        function darkmodefunc() {
-          var element = document.getElementById(background);
-          element.classList.toggle("darkmode");
-        }
-      </script>
     </body>
 </html>
