--- a/StoryPage2.html
+++ b/StoryPage2.html
@@ -5,11 +5,22 @@
     <head>
         <title>Kung Fu Journey: Shen's Life</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/rowboat.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
     </head>
     <body>
-        <div class="background">
-            <div class="content">
-                <h1>Great News!</h1>
+        <h1>Great News!</h1>
+        <div class="navbar">
+        </div>
+        <div id="background">
+            <div id="content">
                 <p>
                     After catching lots of fish, Shen returns back to his home which is a small hut at the shore. Shen gives the caught fish to his parents and heads out to play with his friends.
                     <br>
