--- a/StoryPage2_1_1.html
+++ b/StoryPage2_1_1.html
@@ -1,20 +1,31 @@
+
+
 <!DOCTYPE  html>
 <html>
     <head>
         <title>Kung Fu Journey: Share Thoughts or Not</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/playing.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
     </head>
     <body>
-        <div class="background">
-            <div class="content">
-                <h1>I'd love to learn Kung Fu</h1>
+        <h1>I'd love to learn Kung Fu</h1>
+        <div id="background">
+            <div id="content">
                 <p>
                     Full of excitement, Shen shares his love for love for Kung Fu and the dreams he was having lately.
                     <br><br>
                     There was a moment of silence, and all the boys burst out in laughter as they could not believe their ears.
                     <br><br>
                     Feeling embarrassed, Shen walks back home and decides to go all alone the next day.
-                    <br><br>
+                    <br><br><br><br>
                     <a class="options" href="StoryPage2_1_2.html">The Next Day</a>
                 </p>
             </div>
