--- a/StoryPage2_1_2.html
+++ b/StoryPage2_1_2.html
@@ -1,20 +1,32 @@
+
+
 <!DOCTYPE  html>
 <html>
     <head>
         <title>Kung Fu Journey: Event Day</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/stairmountain.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
     </head>
     <body>
-        <div class="background">
-            <div class="content">
-                <h1>Shall or Shall Not?</h1>
+        <h1>Shall or Shall Not?</h1>
+        <div id="background">
+            <div id="content">
                 <p>
-                  Shen gets up early than usual and wears the best clothes he has at home.
-                  <br><br>
-                  The village is silent, Shen realizes that most of the villagers have already left.
-                  <br><br>
-                  On his way, Shen rethinks whether he has taken the right decision or not.
-
+                    Shen gets up early than usual and wears the best clothes he has at home.
+                    <br><br>
+                    The village is silent, Shen realizes that most of the villagers have already left.
+                    <br><br>
+                    On his way, Shen rethinks whether he has taken the right decision or not.
+                    <br><br><br><br>
+                    <a class="options" href="StoryPage3.html">Next</a>
                 </p>
             </div>
         </div>
