--- a/StoryPage2_2_1.html
+++ b/StoryPage2_2_1.html
@@ -1,19 +1,30 @@
+
+
 <!DOCTYPE  html>
 <html>
     <head>
         <title>Kung Fu Journey: Event Day</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/playing.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
     </head>
     <body>
-        <div class="background">
-            <div class="content">
-                <h1>All go, One reach</h1>
+        <h1>All go, One reach</h1>
+        <div class="navbar">
+        </div>
+        <div id="background">
+            <div id="content">
                 <p>
-                    Shen is excited to hear the news from his friend.
+                    Shen is excited to hear the news from his friend but Shen keeps his excitement hidden and insists his friends that they should go as well.
                     <br><br>
-                    Shen keeps his excitement hidden and insists his friends that they should go as well.
-                    <br><br>
-                    Along with few of his friends, Shen plans to go the next day.
+                    Along with few of his friends, Shen and his friends plan to go the next day.
                     <br><br><br><br>
                     <a class="options" href="StoryPage2_2_2.html">The Next Day</a>
                 </p>
