--- a/StoryPage2_2_2.html
+++ b/StoryPage2_2_2.html
@@ -1,13 +1,24 @@
+
+
 <!DOCTYPE  html>
 <html>
     <head>
         <title>Kung Fu Journey: Event Day</title>
         <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/stairmountain.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
     </head>
     <body>
-        <div class="background">
-            <div class="content">
-                <h1>Make a move</h1>
+        <h1>Make a move</h1>
+        <div id="background">
+            <div id="content">
                 <p>
                     All the boys wear their best clothes they have and will be ready to leave.
                     <br><br>
