--- a/StoryPage3.html
+++ b/StoryPage3.html
@@ -1,20 +1,33 @@
+
+
+<!DOCTYPE  html>
 <html>
-
-<head>
-<title>Kung Fu Journey: Event Day</title>
-</head>
-
-<body>
-
-<h1>Go or No!</h1>
-
-<p>
-Shen does not have the courage to go all by him self.
-
-He fears that he will not be welcomed.
-
-<a href="">This is a link</a>
-</p>
-
-</body>
+    <head>
+        <title>Kung Fu Journey: Event Day</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/stairmountain.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Go or No!</h1>
+        <div id="background">
+            <div id="content">
+                <p>
+                    Shen does not have the courage to go all by him self.
+                    <br><br>
+                    He fears that he will not be welcomed.
+                    <br><br><br><br>
+                    <a class="options" href="StoryPage3_2_1.html">Keep the negative thoughts aside and go!</a>
+                    <a class="options" href="StoryPage3_1_1.html">Accept his fate and return home</a>
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
