--- a/StoryPage3_2_1.html
+++ b/StoryPage3_2_1.html
@@ -1,23 +1,42 @@
+
+
+<!DOCTYPE  html>
 <html>
-
-<head>
-<title>Kung Fu Journey: Event Day</title>
-</head>
-
-<body>
-
-<h1>First step</h1>
-
-<p>
-With all courage left in him, Shen decides he would go.
-<br><br>
-Shen begins his climb.
-<br><br>
-On his way up, Shen turns back to take a look.
-<br><br>
-
-<a href="">This is a link</a>
-</p>
-
-</body>
+    <head>
+        <title>Kung Fu Journey: Event Day</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/viewfrommountain.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>First step</h1>
+        <div id="background">
+            <div id="content">
+                <p>
+                    With all courage left in him, Shen decides he would go.
+                    <br><br>
+                    Shen begins his climb.
+                    <br><br>
+                    After a long time Shen gets tired and decides to take a break.
+                    <br><br>
+                    Just then, Shen turns back to take a look.
+                    <br><br>
+                    Shen is awestruck as he sees the village along with the greenery, beautiful mountains surrounding it, and the river flowing into the sea.
+                    <br><br>
+                    Shen gazed for so long as he had never seen such a beautiful view in his life.
+                    <br><br>
+                    After a long time, Shen was satisfied and realized he way only half way through. If he did not make it in time, the gates would be closed and events would begin.
+                    <br><br><br><br>
+                    <a class="options "href="StoryPage3_2_2.html">Hurry!</a>
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
