--- a/StoryPage3_2_2.html
+++ b/StoryPage3_2_2.html
@@ -2,19 +2,24 @@
 
 <head>
 <title>Kung Fu Journey: Event Day</title>
+<link rel="stylesheet" href="stylesheet.css">
+<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+<style>
+    #background{
+    background-image: url("backgrounds/goback.jpg");
+    background-repeat: repeat-y;
+    background-size: cover;
+    padding: 80px;
+    }
+</style>
 </head>
 
 <body>
-
-<h1>What a beautiful view</h1>
+<h1>Hurry!</h1>
+<div id="background">
+    <div id="content">
 
 <p>
-Shen is awestruck as he sees the village along with the greenery, beautiful mountains surrounding it, and the river flowing into the sea.
-<br><br>
-Shen gazed for so long as he had never seen such a beautiful view in his life.
-<br><br>
-After a long time, Shen was satisfied and realized he way only half way through. If he did not make it in time, the gates would be closed and events would begin.
-<br><br>
 Shen hurriedly climbs up the stairs as fast as he could.
 <br><br>
 By the time he reached the temple, the gates have already been closed and the events had begin.
@@ -22,9 +27,10 @@ By the time he reached the temple, the gates have already been closed and the ev
 Shen is sad and somewhat ashamed of himself.
 <br><br>
 He is very eager to learn more about the place and he wanders around.
-
-<a href="">This is a link</a>
+<br><br><br><br>
+<a class="options" href="StoryPage3_2_3.html">Wander About</a>
 </p>
-
+</div>
+</div>
 </body>
 </html>
