All HTML designing done
All backgrounds and HTML have been modified. Pending work on if any additional features

--- a/StoryPage2_2_1.html
+++ b/StoryPage2_2_1.html
@@ -3,7 +3,7 @@
 <!DOCTYPE  html>
 <html>
     <head>
-        <title>Kung Fu Journey: Event Day</title>
+        <title>Kung Fu Journey: All go, One reach</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
         <style>
