--- a/StoryPage3_2_2.html
+++ b/StoryPage3_2_2.html
@@ -1,36 +1,36 @@
+
+
+<!DOCTYPE  html>
 <html>
-
-<head>
-<title>Kung Fu Journey: Event Day</title>
-<link rel="stylesheet" href="stylesheet.css">
-<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
-<style>
-    #background{
-    background-image: url("backgrounds/goback.jpg");
-    background-repeat: repeat-y;
-    background-size: cover;
-    padding: 80px;
-    }
-</style>
-</head>
-
-<body>
-<h1>Hurry!</h1>
-<div id="background">
-    <div id="content">
-
-<p>
-Shen hurriedly climbs up the stairs as fast as he could.
-<br><br>
-By the time he reached the temple, the gates have already been closed and the events had begin.
-<br><br>
-Shen is sad and somewhat ashamed of himself.
-<br><br>
-He is very eager to learn more about the place and he wanders around.
-<br><br><br><br>
-<a class="options" href="StoryPage3_2_3.html">Wander About</a>
-</p>
-</div>
-</div>
-</body>
+    <head>
+        <title>Kung Fu Journey: Hurry!</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/staircase.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Hurry!</h1>
+        <div id="background">
+            <div id="content">
+                <p>
+                    Shen hurriedly climbs up the stairs as fast as he could.
+                    <br><br>
+                    By the time he reached the temple, the gates have already been closed and the events had begin.
+                    <br><br>
+                    Shen is sad and somewhat ashamed of himself.
+                    <br><br>
+                    He is very eager to learn more about the place and he wanders around.
+                    <br><br><br><br>
+                    <a class="options" href="StoryPage3_2_3.html">Wander About</a>
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
