--- a/StoryPage3_2_3.html
+++ b/StoryPage3_2_3.html
@@ -1,26 +1,41 @@
+
+
+<!DOCTYPE  html>
 <html>
-
-<head>
-<title>Kung Fu Journey: Event Day</title>
-</head>
-
-<body>
-
-<h1>Run or Stay</h1>
-
-<p>
-Shen finds himself in a courtyard where many beautiful ancient artefacts were placed.
-<br><br>
-Shen quickly gets lost into assessing each one of them as he wanted to learn more about it.
-<br><br>
-Just then an old man walks in and approaches Shen.
-<br><br>
-Shen is very terrified as he realizes he is in a restricted place and thinks that he would be punished for it.
-<br><br>
-However, the old man was calm and kind. He asked Shen how can he help him.
-
-<a href="">This is a link</a>
-</p>
-
-</body>
+    <head>
+        <title>Kung Fu Journey: Run or No!</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/courtyard.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>Run or Stay</h1>
+        <div id="background">
+            <div id="content">
+                <p>
+                    Shen finds himself in a courtyard where many beautiful ancient artefacts were placed.
+                    <br><br>
+                    Shen quickly gets lost into assessing each one of them as he wanted to learn more about it.
+                    <br><br>
+                    Just then an old man walks in and approaches Shen.
+                    <br><br>
+                    Shen is very terrified as he realizes he is in a restricted place and thinks that he would be punished for it.
+                    <br><br>
+                    However, the old man was calm and kind. He asked Shen how can he help him.
+                    <br><br>
+                    What shall Shen do?
+                    <br><br><br><br>
+                    <a class="options" href="StoryPage4_1_1.html">Act like he is lost</a>
+                    <a class="options" href="StoryPage4_2_1.html">Run from there</a>
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
