--- a/StoryPage2_2_2.html
+++ b/StoryPage2_2_2.html
@@ -3,7 +3,7 @@
 <!DOCTYPE  html>
 <html>
     <head>
-        <title>Kung Fu Journey: Event Day</title>
+        <title>Kung Fu Journey: Make a move!</title>
         <link rel="stylesheet" href="stylesheet.css">
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
         <style>
