--- a/StoryPage3_1_1.html
+++ b/StoryPage3_1_1.html
@@ -1,38 +1,36 @@
+
+
 <!DOCTYPE  html>
 <html>
-
-<head>
-<title>Kung Fu Journey: Does not go</title>
-<link rel="stylesheet" href="stylesheet.css">
-<link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
-<style>
-    #background{
-    background-image: url("backgrounds/goback.jpg");
-    background-repeat: repeat-y;
-    background-size: cover;
-    padding: 80px;
-    }
-</style>
-</head>
-
-<body>
-<h1>No More!</h1>
-<div id="background">
-    <div id="content">
-
-<p>
-The negative thoughts going through Shen's mind demotivate him.
-<br><br>
-He believes that poor people like him have no place there and are deemed to be poor just like his parents and grandparents.
-<br><br>
-Shen is very sad and returns back to his home in tears.
-<br><br>
-Shen ends up becoming a fisherman just like his father.
-<br><br><br><br>
-<a class="endbutton" href="">THE END</a>
-</p>
-</div>
-</div>
-
-</body>
+    <head>
+        <title>Kung Fu Journey: Give up</title>
+        <link rel="stylesheet" href="stylesheet.css">
+        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <style>
+            #background{
+            background-image: url("backgrounds/goback.jpg");
+            background-repeat: repeat-y;
+            background-size: cover;
+            padding: 80px;
+            }
+        </style>
+    </head>
+    <body>
+        <h1>No More!</h1>
+        <div id="background">
+            <div id="content">
+                <p>
+                    The negative thoughts going through Shen's mind demotivate him.
+                    <br><br>
+                    He believes that poor people like him have no place there and are deemed to be poor just like his parents and grandparents.
+                    <br><br>
+                    Shen is very sad and returns back to his home in tears.
+                    <br><br>
+                    Shen ends up becoming a fisherman just like his father.
+                    <br><br><br><br>
+                    <a class="endbutton" href="">THE END</a>
+                </p>
+            </div>
+        </div>
+    </body>
 </html>
