Complete HTML  and design done
All backgrounds and designing done. Also added a end page.

--- a/StoryPage1.html
+++ b/StoryPage1.html
@@ -8,7 +8,7 @@
         <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
         <style>
           #background{
-            background-image: url("backgrounds/backgroundswordstand.jpg");
+            background-image: url("backgrounds/battle.jpg");
             background-repeat: repeat-y;
             background-size: cover;
             padding: 80px;
