--- a/StoryPage2.html
+++ b/StoryPage2.html
@@ -16,11 +16,12 @@
         </style>
     </head>
     <body>
-        <h1>Great News!</h1>
+      <h1>Kung Fu Journey</h1>
         <div class="navbar">
         </div>
         <div id="background">
             <div id="content">
+              <h2>Great News!</h2>
                 <p>
                     After catching lots of fish, Shen returns back to his home which is a small hut at the shore. Shen gives the caught fish to his parents and heads out to play with his friends.
                     <br>
