--- a/StoryPage2_1_1.html
+++ b/StoryPage2_1_1.html
@@ -16,9 +16,10 @@
         </style>
     </head>
     <body>
-        <h1>I'd love to learn Kung Fu</h1>
+        <h1>Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
+              <h2>I'd love to learn Kung Fu</h2>
                 <p>
                     Full of excitement, Shen shares his love for love for Kung Fu and the dreams he was having lately.
                     <br><br>
