--- a/StoryPage2_1_2.html
+++ b/StoryPage2_1_2.html
@@ -16,9 +16,10 @@
         </style>
     </head>
     <body>
-        <h1>Shall or Shall Not?</h1>
+        <h1>Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
+              <h2>Shall or Shall Not?</h2>
                 <p>
                     Shen gets up early than usual and wears the best clothes he has at home.
                     <br><br>
