--- a/StoryPage2_2_1.html
+++ b/StoryPage2_2_1.html
@@ -16,11 +16,12 @@
         </style>
     </head>
     <body>
-        <h1>All go, One reach</h1>
+        <h1>Kung Fu Journey</h1>
         <div class="navbar">
         </div>
         <div id="background">
             <div id="content">
+              <h2>All go, One reach</h2>
                 <p>
                     Shen is excited to hear the news from his friend but Shen keeps his excitement hidden and insists his friends that they should go as well.
                     <br><br>
