--- a/StoryPage2_2_2.html
+++ b/StoryPage2_2_2.html
@@ -16,9 +16,10 @@
         </style>
     </head>
     <body>
-        <h1>Make a move</h1>
+      <h1>Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
+              <h2>Make a move</h2>
                 <p>
                     All the boys wear their best clothes they have and will be ready to leave.
                     <br><br>
@@ -27,7 +28,8 @@
                     The village was in total silence as most of the villagers had already left.
                     <br><br>
                     When they were just about the climb the stairs which lead to the temple of dragon, Shen's friends decide not to go as they thought they will not be welcomed.
-                    <br><br>
+                    <br><br><br><br>
+                    <a class="options" href="StoryPage3.html">Next</a>
                 </p>
             </div>
         </div>
