--- a/StoryPage3_1_1.html
+++ b/StoryPage3_1_1.html
@@ -16,9 +16,10 @@
         </style>
     </head>
     <body>
-        <h1>No More!</h1>
+      <h1>Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
+              <h2>No More!</h2>
                 <p>
                     The negative thoughts going through Shen's mind demotivate him.
                     <br><br>
