--- a/StoryPage3_2_1.html
+++ b/StoryPage3_2_1.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>First step</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>First step</h2>
                 <p>
                     With all courage left in him, Shen decides he would go.
                     <br><br>
