--- a/StoryPage4_1_1.html
+++ b/StoryPage4_1_1.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>I am lost</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>I am lost</h2>
                 <p>
                     Frightened, Shen asks the old man in a quavering voice "Ummm....Where... are the events going on?"
                     <br><br>
