--- a/StoryPage5.html
+++ b/StoryPage5.html
@@ -16,16 +16,18 @@
         </style>
     </head>
     <body>
-        <h1>The oppurtunity</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>The oppurtunity</h2>
                 <p>
                     The old man offers to teach Shen Kung Fu to which the boy's eyes gloom in excitement.
                     <br><br>
                     But there was one condition the old man gave, which was the boy would not get to meet his family everyday which was very difficult for Shen as he was still young.
                     <br><br><br><br>
-                    <a class="options" href="">Accept</a>
-                    <a class="options" href="">Reject</a>
+                    <a class="options" href="StoryPage5_2_1.html">Accept</a>
+                    <a class="options" href="StoryPage5_1_1.html">Reject</a>
                 </p>
             </div>
         </div>
