--- a/StoryPage5_1_1.html
+++ b/StoryPage5_1_1.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Mistakes were made</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Mistakes were made</h2>
                 <p>
                     Shen gets very emotional as he remembers his mother and returns back home.
                     <br><br>
@@ -26,8 +28,8 @@
                     <br><br>
                     Shen listens to the words his mother said and realizes that he had made a mistake.
                     <br><br><br><br>
-                    <a class="options" href="">Move on</a>
-                    <a class="options" href="">Regret his actions</a>
+                    <a class="options" href="StoryPage5_1_2.html">Move on</a>
+                    <a class="options" href="StoryPage5join5_2.html">Regret his actions</a>
                 </p>
             </div>
         </div>
