--- a/StoryPage5_2_1.html
+++ b/StoryPage5_2_1.html
@@ -16,11 +16,13 @@
         </style>
     </head>
     <body>
-        <h1>Chance</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Chance</h2>
                 <p>
-                    On accepting the condition the old man showns Shen his living quarters.
+                    On accepting the condition, the old man shows Shen to his living quarters.
                     <br><br>
                     It was a small room which was ample for Shen.
                     <br><br>
