--- a/StoryPage5_2_2.html
+++ b/StoryPage5_2_2.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Fellow Students</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Fellow Students</h2>
                 <p>
                     Shen joins his fellow students for their meal, however he is rejected by them as they thought Shen does not have a place among them as he was from a lower caste family.
                     <br><br>
