--- a/StoryPage5_2_3.html
+++ b/StoryPage5_2_3.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Training</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Training</h2>
                 <p>
                     As days pass by, routine being followed by Shen becomes really difficult. He has to wake up early, does not get to eat enough and follows rigiours training.
                     <br><br>
