--- a/StoryPage5join5_2.html
+++ b/StoryPage5join5_2.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Make an attempt</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Make an attempt</h2>
                 <p>
                     The same thought keeps going on in Shen's mind and he feels embarrassed for doing such a mistake.
                     <br><br>
