--- a/StoryPage3.html
+++ b/StoryPage3.html
@@ -16,9 +16,10 @@
         </style>
     </head>
     <body>
-        <h1>Go or No!</h1>
+      <h1>Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
+              <h2>Go or No!</h2>
                 <p>
                     Shen does not have the courage to go all by him self.
                     <br><br>
