--- a/StoryPage3_2_2.html
+++ b/StoryPage3_2_2.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Hurry!</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Hurry!</h2>
                 <p>
                     Shen hurriedly climbs up the stairs as fast as he could.
                     <br><br>
