--- a/StoryPage3_2_3.html
+++ b/StoryPage3_2_3.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Run or Stay</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Run or Stay</h2>
                 <p>
                     Shen finds himself in a courtyard where many beautiful ancient artefacts were placed.
                     <br><br>
