--- a/StoryPage4_2_1.html
+++ b/StoryPage4_2_1.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Run Shen Run!</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+                <h2>Run Shen Run!</h2>
                 <p>
                     Shen is frightened and runs away from there.
                     <br><br>
