--- a/StoryPage5_1_2.html
+++ b/StoryPage5_1_2.html
@@ -16,9 +16,11 @@
         </style>
     </head>
     <body>
-        <h1>Move on</h1>
+      <h1>Kung Fu Journey</h1>
+
         <div id="background">
             <div id="content">
+              <h2>Move on</h2>
                 <p>
                     Shen believes that it is now too late and thinks that he had missed an opportunity of a lifetime.
                     <br><br>
