All graphical changes made
All graphical changes made with navigation bar as well

--- a/StoryPage1_1.html
+++ b/StoryPage1_1.html
@@ -3,15 +3,15 @@
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html class="animate__animated animate__rotateInDownLeft">
+<html class="animate__animated animate__slideInRight">
     <head>
-        <title>Kung Fu Journey: Fellow Students</title>
+        <title>Kung Fu Journey: Shen's Life</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Aclonica">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
-            background-image: url("backgrounds/sunshine.jpg");
+            background-image: url("backgrounds/rowboat.jpg");
             background-repeat: repeat-y;
             background-size: cover;
             padding: 80px;
@@ -26,16 +26,15 @@
         </div>
         <div id="background">
             <div id="content">
-                <h2> The End!</h2>
+                <h2>Life of Shen</h2>
                 <p>
-                    Congratulations! You have completed this short make-your-own-adventure. Hope you have enjoyed!
-                    <script type="module">
-                        import confetti from 'https://cdn.skypack.dev/canvas-confetti';
-                        for (var i=0; i<5; i++) confetti(i);
-                    </script>
+                    Splash! Shen suddenly wakes up from his sleep, and realizes all was just a dream.
+                    <br><br>
+                    Being the son of a fisherman, Shen gets up and get to work. Shen rows the boat away from the shore to a place where he finds plenty of fish and start fishing.
+                    <br><br><br><br>
+                    <a class="options" href="StoryPage2.html">Next</a>
                 </p>
             </div>
-            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
