--- a/StoryPage2.html
+++ b/StoryPage2.html
@@ -1,11 +1,14 @@
+
+
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__slideInRight">
     <head>
         <title>Kung Fu Journey: Shen's Life</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/rowboat.jpg");
@@ -16,12 +19,16 @@
         </style>
     </head>
     <body>
-      <h1>Kung Fu Journey</h1>
+        <h1>Kung Fu Journey</h1>
+        <div class="navbar">
+          <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+        </div>
         <div class="navbar">
         </div>
         <div id="background">
             <div id="content">
-              <h2>Great News!</h2>
+                <h2>Great News!</h2>
                 <p>
                     After catching lots of fish, Shen returns back to his home which is a small hut at the shore. Shen gives the caught fish to his parents and heads out to play with his friends.
                     <br>
@@ -36,6 +43,7 @@
                     <a class="options"href="StoryPage2_2_1.html">Insist on going as they are free the next day</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
