--- a/StoryPage2_2_1.html
+++ b/StoryPage2_2_1.html
@@ -1,11 +1,14 @@
 
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__fadeIn">
     <head>
         <title>Kung Fu Journey: All go, One reach</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/playing.jpg");
@@ -18,10 +21,14 @@
     <body>
         <h1>Kung Fu Journey</h1>
         <div class="navbar">
+          <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+        </div>
+        <div class="navbar">
         </div>
         <div id="background">
             <div id="content">
-              <h2>All go, One reach</h2>
+                <h2>All go, One reach</h2>
                 <p>
                     Shen is excited to hear the news from his friend but Shen keeps his excitement hidden and insists his friends that they should go as well.
                     <br><br>
@@ -30,6 +37,7 @@
                     <a class="options" href="StoryPage2_2_2.html">The Next Day</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
