--- a/StoryPage1.html
+++ b/StoryPage1.html
@@ -1,24 +1,25 @@
+
+
 <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__backInDown">
     <head>
         <title>Kung Fu Journey: Shen's Life</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
-          #background{
+            #background{
             background-image: url("backgrounds/battle.jpg");
             background-repeat: repeat-y;
             background-size: cover;
             padding: 80px;
-          }
+            }
         </style>
     </head>
     <body>
-      <h1>Kung Fu Journey</h1>
-      <div class="navbar">
-      </div>
+        <h1>Kung Fu Journey</h1>
         <div id="background">
             <div id="content">
                 <h2>Life of Shen</h2>
@@ -29,10 +30,9 @@
                     <br><br>
                     Being the son of a fisherman, Shen gets up and get to work. Shen rows the boat away from the shore to a place where he finds plenty of fish and start fishing.
                     <br><br><br><br>
-                    <a class="options" href="StoryPage2.html">Next</a>
+                    <a class="options" href="StoryPage1_1.html">Next</a>
                 </p>
             </div>
-            <a href="" class="previous">Previous</a>
         </div>
     </body>
 </html>
