--- a/StoryPage2_1_1.html
+++ b/StoryPage2_1_1.html
@@ -1,11 +1,14 @@
 
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__fadeIn">
     <head>
         <title>Kung Fu Journey: Share Thoughts or Not</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/playing.jpg");
@@ -17,9 +20,13 @@
     </head>
     <body>
         <h1>Kung Fu Journey</h1>
+        <div class="navbar">
+          <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+        </div>
         <div id="background">
             <div id="content">
-              <h2>I'd love to learn Kung Fu</h2>
+                <h2>I'd love to learn Kung Fu</h2>
                 <p>
                     Full of excitement, Shen shares his love for love for Kung Fu and the dreams he was having lately.
                     <br><br>
@@ -30,6 +37,7 @@
                     <a class="options" href="StoryPage2_1_2.html">The Next Day</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
