--- a/StoryPage3.html
+++ b/StoryPage3.html
@@ -1,11 +1,14 @@
 
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__fadeIn">
     <head>
         <title>Kung Fu Journey: Event Day</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/stairmountain.jpg");
@@ -17,6 +20,10 @@
     </head>
     <body>
       <h1>Kung Fu Journey</h1>
+      <div class="navbar">
+        <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+        <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+      </div>
         <div id="background">
             <div id="content">
               <h2>Go or No!</h2>
@@ -29,6 +36,7 @@
                     <a class="options" href="StoryPage3_1_1.html">Accept his fate and return home</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
