--- a/StoryPage3_1_1.html
+++ b/StoryPage3_1_1.html
@@ -1,11 +1,14 @@
 
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__slideInRight">
     <head>
         <title>Kung Fu Journey: Give up</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/goback.jpg");
@@ -16,10 +19,14 @@
         </style>
     </head>
     <body>
-      <h1>Kung Fu Journey</h1>
+        <h1>Kung Fu Journey</h1>
+        <div class="navbar">
+          <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+        </div>
         <div id="background">
             <div id="content">
-              <h2>No More!</h2>
+                <h2>No More!</h2>
                 <p>
                     The negative thoughts going through Shen's mind demotivate him.
                     <br><br>
@@ -29,9 +36,10 @@
                     <br><br>
                     Shen ends up becoming a fisherman just like his father.
                     <br><br><br><br>
-                    <a class="endbutton" href="">THE END</a>
+                    <a class="endbutton" href="endpage.html">THE END</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
