--- a/StoryPage3_2_3.html
+++ b/StoryPage3_2_3.html
@@ -1,11 +1,14 @@
 
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
 <html>
     <head>
         <title>Kung Fu Journey: Run or No!</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/courtyard.jpg");
@@ -16,11 +19,14 @@
         </style>
     </head>
     <body>
-      <h1>Kung Fu Journey</h1>
-
+        <h1>Kung Fu Journey</h1>
+        <div class="navbar">
+          <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+        </div>
         <div id="background">
             <div id="content">
-              <h2>Run or Stay</h2>
+                <h2>Run or Stay</h2>
                 <p>
                     Shen finds himself in a courtyard where many beautiful ancient artefacts were placed.
                     <br><br>
@@ -38,6 +44,7 @@
                     <a class="options" href="StoryPage4_2_1.html">Run from there</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
