--- a/StoryPage5_2_1.html
+++ b/StoryPage5_2_1.html
@@ -1,11 +1,14 @@
 
 
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+<meta content="utf-8" http-equiv="encoding">
 <!DOCTYPE  html>
-<html>
+<html class="animate__animated animate__slideInRight">
     <head>
         <title>Kung Fu Journey: Chance</title>
         <link rel="stylesheet" href="stylesheet.css">
-        <link href='https://fonts.googleapis.com/css?family=Aclonica' rel='stylesheet'>
+        <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Aclonica'>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
         <style>
             #background{
             background-image: url("backgrounds/room.jpg");
@@ -16,11 +19,14 @@
         </style>
     </head>
     <body>
-      <h1>Kung Fu Journey</h1>
-
+        <h1>Kung Fu Journey</h1>
+        <div class="navbar">
+          <li><a class="backbutton" href="javascript:history.back()">Go Back</a></li>
+          <li><a class="backbutton" href="StoryPage1.html">Restart Game</a></li>
+        </div>
         <div id="background">
             <div id="content">
-              <h2>Chance</h2>
+                <h2>Chance</h2>
                 <p>
                     On accepting the condition, the old man shows Shen to his living quarters.
                     <br><br>
@@ -31,6 +37,7 @@
                     <a class="options" href="StoryPage5_2_2.html">Join the other students for the meal</a>
                 </p>
             </div>
+            <a class="backbutton" href="javascript:history.back()">Go Back</a>
         </div>
     </body>
 </html>
